fix: remove pagination gap 680px screen

--- a/src/components/pagination.css
+++ b/src/components/pagination.css
@@ -13,6 +13,7 @@
     .pagination {
         display: grid;
         grid-template-areas: 'pages pages pages pages''prev5 prev next next5';
+        row-gap: 0;
     }
 
     .pages {
